# clawguard-shield-python

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
clawguard_shield/: __init__.py  client.py
examples/: basic_scan.py  error_handling.py  fastapi_middleware.py  flask_middleware.py
tests/: test_client.py
