[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawguard-shield"
version = "0.1.0"
description = "Python SDK for ClawGuard Shield — AI Agent Security Scanning API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Joerg Michno", email = "michno.jrg@gmail.com"},
]
keywords = ["security", "ai", "agents", "prompt-injection", "scanning", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/joergmichno/clawguard-shield-python"
Documentation = "https://prompttools.co/shield"
Repository = "https://github.com/joergmichno/clawguard-shield-python"
"Bug Tracker" = "https://github.com/joergmichno/clawguard-shield-python/issues"
"API" = "https://prompttools.co/api/v1/"

[tool.setuptools.packages.find]
include = ["clawguard_shield*"]
